# chokurei

./: .gitignore  .travis.yml  Cargo.toml  README.md  rctl
common/: Cargo.toml  key.rs  lib.rs  logger.rs  messages.rs  models.rs  schema.rs  types.rs
compounder/: Cargo.toml  document.rs  main.rs  stopwords.txt
docs/ru/report/: 00-abstract.tex  00-titlepage.tex  12-intro.tex  20-analysis.tex  21-collecting.tex  22-clustering.tex  23-ranking.tex  30-design.tex  40-implementation.tex  50-research.tex  80-conclusion.tex  81-biblio.tex  G7-32.sty  index.bib  index.tex  listings.inc.tex  macros.inc.tex  preamble.inc.tex
docs/ru/slides/: index.tex  macros.inc.tex  preamble.inc.tex
fetcher/: Cargo.toml  download.rs  main.rs  models.rs  scheduler.rs
migrations/001_create_feed/: down.sql  up.sql
migrations/002_create_entry/: down.sql  up.sql
raider/: Cargo.toml  download.rs  main.rs  scheduler.rs
scout/: Cargo.toml  main.rs
scripts/: create_entries_topic.sh  create_expert_topic.sh  create_fakes_topic.sh  create_feeds_topic.sh
src/: main.rs
src/fetcher/: main.rs
src/server/: main.rs
