[package]
name = "common"
version = "0.0.0"
publish = false

[lib]
path = "lib.rs"

[dependencies]
log = "^0.3.7"
env_logger = "^0.4.2"
time = "^0.1.36"
uuid = "^0.4"
url = "^1.4"
diesel = { version = "^0.12", features = ["postgres", "deprecated-time", "uuid", "unstable"] }
diesel_codegen = { version = "^0.12", features = ["postgres"] }
