[package]
name = "compounder"
version = "0.0.0"
publish = false

[[bin]]
name = "compounder"
path = "main.rs"

[dependencies]
common = { path = "../common" }
log = "^0.3.7"
futures = "^0.1.11"
tokio-core = "^0.1.6"
time = "^0.1.36"
serde_json = "^1.0.1"
kafka = "^0.6.0"
url = "^1.4"
rust-stemmers = "^1.0.1"
lazy_static = "^0.2.8"
