[package]
name = "fetcher"
version = "0.0.0"
publish = false

[[bin]]
name = "fetcher"
path = "main.rs"

[dependencies]
common = { path = "../common" }
log = "^0.3.7"
futures = "^0.1.11"
tokio-core = "^0.1.6"
tokio-request = { git = "https://github.com/NeoLegends/tokio-request" }
rss = "^0.4"
kuchiki = "^0.4.1"
time = "^0.1.36"
mailparse = "^0.5.1"
