[package]
name = "raider"
version = "0.0.0"
publish = false

[[bin]]
name = "raider"
path = "main.rs"

[dependencies]
common = { path = "../common" }
log = "^0.3.7"
futures = "^0.1.11"
tokio-core = "^0.1.6"
tokio-request = { git = "https://github.com/NeoLegends/tokio-request", rev = "6cdab63" }
rss = "^0.4"
time = "^0.1.36"
mailparse = "^0.5.1"
readability = { git = "https://github.com/loyd/readability.rs" }
serde_json = "^1.0.1"
kafka = "^0.6.0"
url = "^1.4"
